--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -39,10 +39,10 @@
     "playwright": ">=1.0.0"
   },
   "devDependencies": {
-    "@applitools/sdk-coverage-tests": "^1.0.15",
+    "@applitools/sdk-coverage-tests": "2.0.2",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "^0.4.2",
-    "@applitools/sdk-shared": "^0.3.0",
+    "@applitools/sdk-shared": "0.4.1",
     "eslint": "^7.9.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
