--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-storybook",
-  "version": "3.10.1",
+  "version": "3.11.0",
   "description": "",
   "engines": {
     "node": ">=8.6.0"
@@ -52,11 +52,11 @@
     "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
   },
   "dependencies": {
-    "@applitools/dom-snapshot": "4.2.4",
-    "@applitools/eyes-sdk-core": "12.5.4",
+    "@applitools/dom-snapshot": "4.2.6",
+    "@applitools/eyes-sdk-core": "12.5.7",
     "@applitools/functional-commons": "1.6.0",
     "@applitools/monitoring-commons": "1.0.19",
-    "@applitools/visual-grid-client": "15.0.16",
+    "@applitools/visual-grid-client": "15.1.1",
     "boxen": "4.2.0",
     "chalk": "3.0.0",
     "detect-port": "1.3.0",
@@ -67,8 +67,8 @@
     "yargs": "12.0.5"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "^0.3.1",
-    "@applitools/sdk-shared": "^0.1.0",
+    "@applitools/sdk-release-kit": "0.5.3",
+    "@applitools/sdk-shared": "0.4.2",
     "@storybook/addon-options": "^5.2.8",
     "@storybook/react": "^5.2.8",
     "@testing-library/dom": "^5.6.1",
