--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -56,8 +56,8 @@
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "yarn run:docker yarn run mocha --no-timeouts ./test/it/*.spec.js",
-    "test:coverage": "yarn run:docker yarn run mocha --config .mocharc.cvg.js",
+    "test:it": "yarn run:docker yarn mocha --no-timeouts ./test/it/*.spec.js",
+    "test:coverage": "yarn run:docker yarn mocha --config .mocharc.cvg.js",
     "coverage:generate": "coverage-tests generate ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:report": "coverage-tests report ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
@@ -67,7 +67,8 @@
     "postversion": "bongo postversion",
     "deps": "bongo deps",
     "build": "docker build -t applitools/puppeteer-chrome .",
-    "run:docker": "docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome"
+    "run:docker": "docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome",
+    "moca": "yarn run:docker yarn mocha --no-timeouts"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
