spawn detached child process

--- a/packages/eyes-api/tsconfig.json
+++ b/packages/eyes-api/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "exclude": ["./src/output"],
   "compilerOptions": {
     "outDir": "dist",
     "declarationDir": "types",
@@ -13,5 +14,6 @@
     "preserveConstEnums": true,
     "downlevelIteration": true,
     "stripInternal": true,
+    
   },
 }
