--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -56,8 +56,8 @@
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "yarn run:docker yarn mocha --no-timeouts ./test/it/*.spec.js",
-    "test:coverage": "yarn run:docker yarn mocha --config .mocharc.cvg.js",
+    "test:it": "yarn run:docker yarn mocha --exit --no-timeouts ./test/it/*.spec.js",
+    "test:coverage": "yarn run:docker yarn mocha --exit --config .mocharc.cvg.js",
     "coverage:generate": "coverage-tests generate ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:report": "coverage-tests report ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
