--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@applitools/sdk-shared",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "engines": {
     "node": ">=10.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "directories": {
     "lib": "./src",
@@ -44,7 +47,7 @@
     "morgan": "1.10.0",
     "ncp": "2.0.0",
     "node-fetch": "2.6.1",
-    "prettier": "^1.18.2",
+    "prettier": "1.18.2",
     "yargs": "15.3.1"
   },
   "devDependencies": {
