CI env var CVG_TESTS_REMOTE

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,3 +18,5 @@ jobs:
           yarn
           yarn docker:setup
           yarn coverage:sandbox
+    env:
+      CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
