--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,10 @@ jobs:
         with:
           node-version: 14
       - run: |
-          cd "packages/${{ github.event.inputs.sdkName }}"
+          cd "packages/${{github.event.inputs.sdkName}}"
           yarn
           yarn docker:setup
           yarn coverage:sandbox
     env:
       CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
+      APPLITOOLS_API_KEY_SDK: {{secrets.APPLITOOLS_API_KEY_SDK}}
