--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -57,7 +57,8 @@
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
     "test:it": "yarn run:docker yarn mocha --exit --no-timeouts ./test/it/*.spec.js",
-    "test:coverage": "yarn run:docker yarn mocha --exit --config .mocharc.cvg.js",
+    "test:coverage": "yarn mocha --exit --config .mocharc.cvg.js",
+    "test:coverage:local": "yarn run:docker yarn mocha --exit --config .mocharc.cvg.js",
     "coverage:generate": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
@@ -68,6 +69,7 @@
     "deps": "bongo deps",
     "build": "docker build -t applitools/puppeteer-chrome .",
     "run:docker": "docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome",
+    "docker:setup": "echo 'docker:setup is a no-op. Move along, nothing to see here.'",
     "moca": "yarn run:docker yarn mocha --no-timeouts"
   },
   "license": "SEE LICENSE IN LICENSE",
