refactor output classes

--- a/packages/eyes-api/tsconfig.json
+++ b/packages/eyes-api/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "exclude": ["./src/output"],
   "compilerOptions": {
     "outDir": "dist",
     "declarationDir": "types",
@@ -14,6 +13,6 @@
     "preserveConstEnums": true,
     "downlevelIteration": true,
     "stripInternal": true,
-    
+    "experimentalDecorators": true
   },
 }
