--- a/packages/eyes-api/.eslintrc
+++ b/packages/eyes-api/.eslintrc
@@ -1,16 +1,18 @@
 {
+  "root": true,
+  "env": {
+    "node": true
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "extends": ["plugin:@typescript-eslint/recommended"],
-  "plugins": ["prettier", "@typescript-eslint", "mocha-no-only"],
+  "plugins": ["@typescript-eslint", "prettier"],
+  "extends": ["plugin:@typescript-eslint/recommended", "prettier", "prettier/@typescript-eslint"],
   "ignorePatterns": [
     "node_modules/",
     "dist/",
-    "screenshots/",
-    "applitools.config.js",
     "logs",
     "tmp/"
   ],
