--- a/packages/eyes-api/package.json
+++ b/packages/eyes-api/package.json
@@ -24,28 +24,26 @@
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "directories": {
-    "lib": "./lib",
+    "src": "./lib",
     "test": "./test"
   },
   "main": "./dist/index.js",
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
-    "@types/node": "^14.14.7",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.5"
   },
-  "browser": {
-    "tunnel": false
-  },
   "scripts": {
     "lint": "eslint '**/*.ts'",
-    "docs": "typedoc ./index.ts --out ./docs",
+    "doc": "typedoc ./index.ts --out ./docs --name 'Applitools Eyes' --excludeProtected --excludePrivate",
     "build": "tsc"
   },
   "license": "SEE LICENSE IN LICENSE",
