--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -57,7 +57,7 @@
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
     "test:it": "yarn run:docker yarn mocha --exit --no-timeouts ./test/it/*.spec.js",
-    "test:coverage": "yarn mocha --exit --config .mocharc.cvg.js",
+    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --exit --config .mocharc.cvg.js",
     "test:coverage:local": "yarn run:docker yarn mocha --exit --config .mocharc.cvg.js",
     "coverage:generate": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
