--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -68,7 +68,7 @@
     "postversion": "bongo postversion",
     "deps": "bongo deps",
     "build": "docker build -t applitools/puppeteer-chrome .",
-    "run:docker": "docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome",
+    "run:docker": "yarn build && docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome",
     "docker:setup": "echo 'docker:setup is a no-op. Move along, nothing to see here.'",
     "moca": "yarn run:docker yarn mocha --no-timeouts"
   },
