Puppeteer publish test (#299)
* test alt config

* add git config to release yaml

* test

* re-apply original release config and swap running coverage tests for publishing

* pt: cleanup test commit

Co-authored-by: GitHub Action <action@github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
       sdkName:
         description: "SDK name"
         required: true
+      version:
+        description: "version type (specify 'major', 'minor, or 'patch')"
+        required: true
 jobs:
   coverage_sandbox:
     runs-on: ubuntu-latest
@@ -14,12 +17,15 @@ jobs:
         with:
           node-version: 14
       - run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
           cd "packages/${{github.event.inputs.sdkName}}"
           yarn
           yarn docker:setup
-          yarn coverage:sandbox
+          yarn publish --${{github.event.inputs.version}}
     env:
       CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
       APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
       SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
       SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
+      NPM_TOKEN: ${{secrets.NPM_TOKEN}}
