--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           cd "packages/${{github.event.inputs.sdkName}}"
           yarn
           yarn docker:setup
-          yarn publish "--${{github.event.inputs.version}}"
+          yarn publish "--${{github.event.inputs.version}}" --access public
     env:
       CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
       APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
