--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 14
           registry-url: 'https://registry.npmjs.org'
+          always-auth: true
       - run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
