--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -32,6 +32,7 @@
   },
   "main": "./index.js",
   "dependencies": {
+    "@applitools/eyes-api": "link:../eyes-api",
     "@applitools/eyes-sdk-core": "12.5.7",
     "@applitools/visual-grid-client": "15.1.1"
   },
@@ -50,11 +51,14 @@
     "mocha": "^8.0.1",
     "playwright": "1.4.2",
     "prettier": "1.19.0",
-    "spec-xunit-file": "0.0.1-3"
+    "spec-xunit-file": "0.0.1-3",
+    "typedoc": "^0.20.0-beta.8",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/scripts/render.js",
+    "doc": "typedoc ./src/api.ts --out ./doc --name 'Applitools Eyes' --excludeProtected --excludePrivate",
     "test": "yarn test:it",
     "test:it": "mocha --no-timeouts ./test/it/*.spec.js",
     "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
