--- a/packages/eyes-fake-sdk/package.json
+++ b/packages/eyes-fake-sdk/package.json
@@ -24,47 +24,12 @@
     "test": "./test"
   },
   "main": "./index.js",
-  "dependencies": {
-    "@applitools/eyes-sdk-core": "12.5.7",
-    "@applitools/visual-grid-client": "15.1.1"
-  },
-  "peerDependencies": {
-    "puppeteer": ">=5.3.0"
-  },
   "devDependencies": {
-    "@applitools/sdk-coverage-tests": "^2.1.0",
-    "@applitools/sdk-fake-eyes-server": "^2.0.0",
-    "@applitools/sdk-release-kit": "^0.6.0",
-    "@applitools/sdk-shared": "^0.5.5",
-    "eslint": "^7.9.0",
-    "eslint-plugin-mocha-no-only": "^1.1.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "mocha": "^8.0.1",
-    "prettier": "1.19.0",
-    "puppeteer": "5.3.1",
-    "spec-xunit-file": "0.0.1-3"
   },
   "scripts": {
-    "lint": "eslint '**/*.js'",
-    "render": "node ../sdk-shared/scripts/render.js",
-    "test": "yarn test:it",
-    "test:it": "mocha --exit --no-timeouts ./test/it/*.spec.js",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --exit --config .mocharc.cvg.js",
-    "test:it:local": "yarn run:docker yarn mocha --exit --no-timeouts ./test/it/*.spec.js",
-    "test:coverage:local": "yarn run:docker yarn mocha --exit --config .mocharc.cvg.js",
-    "coverage:generate": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
-    "coverage:report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
-    "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
-    "coverage:prod": "yarn coverage:generate && yarn test:coverage && yarn coverage:report",
-    "preversion": "bongo preversion",
-    "version": "bongo version",
-    "postversion": "bongo postversion --skip-release-notification",
-    "deps": "bongo deps",
-    "build": "docker build -t applitools/puppeteer-chrome .",
-    "run:docker": "yarn build && docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome",
-    "docker:setup": "echo 'docker:setup is a no-op. Move along, nothing to see here.'",
-    "moca": "yarn run:docker yarn mocha --no-timeouts"
+    "preversion": "",
+    "version": "",
+    "postversion": ""
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
