fake: add missing script

--- a/packages/eyes-fake-sdk/package.json
+++ b/packages/eyes-fake-sdk/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "preversion": "",
     "version": "",
-    "postversion": ""
+    "postversion": "",
+    "docker:setup":""
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
