--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,9 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           cd "packages/${{github.event.inputs.sdkName}}"
-          npm i
-          npm run docker:setup
-          npm version "${{github.event.inputs.version}}"
-          npm publish --access public
+          yarn
+          yarn docker:setup
+          yarn publish "--${{github.event.inputs.version}}" --access public
     env:
       CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
       APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
