--- a/packages/eyes-fake-sdk/package.json
+++ b/packages/eyes-fake-sdk/package.json
@@ -26,10 +26,10 @@
   "main": "./index.js",
   "devDependencies": {},
   "scripts": {
-    "preversion": "",
-    "version": "",
-    "postversion": "",
-    "docker:setup":""
+    "preversion": "echo 'no-op'",
+    "version": "echo 'no-op'",
+    "postversion": "echo 'no-op'",
+    "docker:setup":"echo 'no-op'"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
