--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
       sdkName:
         description: "SDK name"
         required: true
+      version:
+        description: "version type (specify 'major', 'minor, or 'patch')"
+        required: true
 jobs:
   coverage_sandbox:
     runs-on: ubuntu-latest
@@ -17,9 +20,11 @@ jobs:
           cd "packages/${{github.event.inputs.sdkName}}"
           yarn
           yarn docker:setup
-          yarn coverage:sandbox
+          yarn publish "--${{github.event.inputs.version}}" --access public
     env:
       CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
       APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
       SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
       SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
+      NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
