--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: 14
       - run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
           cd "packages/${{github.event.inputs.sdkName}}"
           yarn
           yarn docker:setup
