--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: 14
       - run: |
-          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}\nregistry=https://registry.npmjs.org/\nalways-auth=true" > .npmrc
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+                registry=https://registry.npmjs.org/
+                always-auth=true" > .npmrc
           cat .npmrc
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
