--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           node-version: 14
       - run: |
-          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
-                registry=https://registry.npmjs.org/
-                always-auth=true" > .npmrc
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
+          echo "registry=https://registry.npmjs.org/" >> .npmrc
+          echo "always-auth=true" >> .npmrc
           cat .npmrc
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
