create separate utils package

--- a/packages/utils/.eslintrc
+++ b/packages/utils/.eslintrc
@@ -3,12 +3,14 @@
   "ignorePatterns": [
     "node_modules/",
     "dist/",
+    "types/",
     "logs",
-    "tmp/",
-    "types/"
+    "tmp/"
   ],
   "env": {
-    "node": true
+    "node": true,
+    "browser": true,
+    "es6": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
