--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@applitools/eyes-api",
-  "version": "0.0.1",
+  "name": "@applitools/utils",
+  "version": "1.0.0",
   "keywords": [
     "applitools",
     "eyes",
@@ -28,9 +28,8 @@
     "test": "./test"
   },
   "main": "./dist/index.js",
-  "dependencies": {
-    "@applitools/utils": "link:../utils"
-  },
+  "types": "./types/index.d.ts",
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
@@ -39,13 +38,10 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.2",
     "typescript": "^4.0.5"
   },
   "scripts": {
     "lint": "eslint '**/*.ts'",
-    "doc": "typedoc ./index.ts --out ./docs --name 'Applitools Eyes' --excludeProtected --excludePrivate",
     "build": "tsc"
   },
   "license": "SEE LICENSE IN LICENSE",
