--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
         description: "version type (specify 'major', 'minor, or 'patch')"
         required: true
 jobs:
-  coverage_sandbox:
+  publish_sdk:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
