--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/visual-grid-client",
-  "version": "15.1.1",
+  "version": "15.2.0",
   "description": "",
   "keywords": [
     "applitools",
@@ -31,7 +31,7 @@
     "index.d.ts"
   ],
   "dependencies": {
-    "@applitools/eyes-sdk-core": "12.5.7",
+    "@applitools/eyes-sdk-core": "12.6.0",
     "@applitools/functional-commons": "1.6.0",
     "@applitools/http-commons": "2.4.3",
     "@applitools/isomorphic-fetch": "3.0.0",
@@ -49,8 +49,8 @@
   },
   "devDependencies": {
     "@applitools/dom-snapshot": "^4.2.5",
-    "@applitools/sdk-release-kit": "^0.5.2",
-    "@applitools/sdk-shared": "^0.4.0",
+    "@applitools/sdk-release-kit": "0.6.0",
+    "@applitools/sdk-shared": "0.5.6",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "chai-uuid": "^1.0.6",
